node-main/deps/v8/test/message/fail/modules-star-conflict1.out
*%(basename)s:5: SyntaxError: The requested module '../../mjsunit/modules-skip-7.mjs' contains conflicting star exports for name 'a'
import {a} from "../../mjsunit/modules-skip-7.mjs";
        ^
SyntaxError: The requested module '../../mjsunit/modules-skip-7.mjs' contains conflicting star exports for name 'a'

